Assets/ANTLR/LogoParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Logo.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class LogoParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		DOT=1, DIGIT=2, LETTER=3, COLON=4, COMMA=5, QUOTE=6, OPER_ADD=7, OPER_SUB=8, 
		OPER_MUL=9, OPER_DIV=10, BRA_L=11, BRA_R=12, SQB_L=13, SQB_R=14, COMP_EQ=15, 
		COMP_L=16, COMP_LE=17, COMP_G=18, COMP_GE=19, COMP_NE=20, SEMI=21, MAKE_SYM=22, 
		LOCAL_SYM=23, TO_SYM=24, END_SYM=25, IF_SYM=26, REPEAT_SYM=27, WHILE_SYM=28, 
		OUTPUT_SYM=29, MOVE_FD=30, MOVE_BK=31, MOVE_LT=32, MOVE_RT=33, PEN_UP=34, 
		PEN_DOWN=35, WHITESPACE=36;
	public const int
		RULE_int_type = 0, RULE_float_type = 1, RULE_string_type = 2, RULE_identifier = 3, 
		RULE_operand = 4, RULE_comparator_gen = 5, RULE_num_val = 6, RULE_operation_gen = 7, 
		RULE_value_gen = 8, RULE_list_acc = 9, RULE_cond = 10, RULE_list_type = 11, 
		RULE_move_keyword = 12, RULE_move_command = 13, RULE_pen_command = 14, 
		RULE_if_command = 15, RULE_if_faker = 16, RULE_list_gen = 17, RULE_assignment_gen = 18, 
		RULE_output_instruction_gen = 19, RULE_instruction_gen = 20, RULE_function_instr = 21, 
		RULE_repeat_loop = 22, RULE_repeat_start = 23, RULE_while_loop = 24, RULE_loop_gen = 25, 
		RULE_instructions_gen = 26, RULE_starter = 27;
	public static readonly string[] ruleNames = {
		"int_type", "float_type", "string_type", "identifier", "operand", "comparator_gen", 
		"num_val", "operation_gen", "value_gen", "list_acc", "cond", "list_type", 
		"move_keyword", "move_command", "pen_command", "if_command", "if_faker", 
		"list_gen", "assignment_gen", "output_instruction_gen", "instruction_gen", 
		"function_instr", "repeat_loop", "repeat_start", "while_loop", "loop_gen", 
		"instructions_gen", "starter"
	};

	private static readonly string[] _LiteralNames = {
		null, "'.'", null, null, "':'", "','", "'\"'", "'+'", "'-'", "'*'", "'/'", 
		"'('", "')'", "'['", "']'", "'='", "'<'", "'<='", "'>'", "'>='", "'!='", 
		"';'", "'MAKE'", "'LOCAL'", "'TO'", "'END'", "'IF'", "'REPEAT'", "'WHILE'", 
		"'OUTPUT'", "'FD'", "'BK'", "'LT'", "'RT'", "'PU'", "'PD'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DOT", "DIGIT", "LETTER", "COLON", "COMMA", "QUOTE", "OPER_ADD", 
		"OPER_SUB", "OPER_MUL", "OPER_DIV", "BRA_L", "BRA_R", "SQB_L", "SQB_R", 
		"COMP_EQ", "COMP_L", "COMP_LE", "COMP_G", "COMP_GE", "COMP_NE", "SEMI", 
		"MAKE_SYM", "LOCAL_SYM", "TO_SYM", "END_SYM", "IF_SYM", "REPEAT_SYM", 
		"WHILE_SYM", "OUTPUT_SYM", "MOVE_FD", "MOVE_BK", "MOVE_LT", "MOVE_RT", 
		"PEN_UP", "PEN_DOWN", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Logo.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static LogoParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}


		// using UnityEngine;
	 	// using System.Collections;
		public Scheduler scheduler = new Scheduler();
		// public TurtleControl controller = GameObject.Find("Turtle").GetComponent<TurtleControl>();

		public LogoParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LogoParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Int_typeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DIGIT() { return GetTokens(LogoParser.DIGIT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIGIT(int i) {
			return GetToken(LogoParser.DIGIT, i);
		}
		public Int_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_int_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.EnterInt_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.ExitInt_type(this);
		}
	}

	[RuleVersion(0)]
	public Int_typeContext int_type() {
		Int_typeContext _localctx = new Int_typeContext(Context, State);
		EnterRule(_localctx, 0, RULE_int_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 56;
				Match(DIGIT);
				}
				}
				State = 59;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==DIGIT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Float_typeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Int_typeContext[] int_type() {
			return GetRuleContexts<Int_typeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Int_typeContext int_type(int i) {
			return GetRuleContext<Int_typeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(LogoParser.DOT, 0); }
		public Float_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_float_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.EnterFloat_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.ExitFloat_type(this);
		}
	}

	[RuleVersion(0)]
	public Float_typeContext float_type() {
		Float_typeContext _localctx = new Float_typeContext(Context, State);
		EnterRule(_localctx, 2, RULE_float_type);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			int_type();
			State = 62;
			Match(DOT);
			State = 63;
			int_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class String_typeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] QUOTE() { return GetTokens(LogoParser.QUOTE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QUOTE(int i) {
			return GetToken(LogoParser.QUOTE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LETTER() { return GetTokens(LogoParser.LETTER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LETTER(int i) {
			return GetToken(LogoParser.LETTER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DIGIT() { return GetTokens(LogoParser.DIGIT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIGIT(int i) {
			return GetToken(LogoParser.DIGIT, i);
		}
		public String_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_string_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.EnterString_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.ExitString_type(this);
		}
	}

	[RuleVersion(0)]
	public String_typeContext string_type() {
		String_typeContext _localctx = new String_typeContext(Context, State);
		EnterRule(_localctx, 4, RULE_string_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			Match(QUOTE);
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DIGIT || _la==LETTER) {
				{
				{
				State = 66;
				_la = TokenStream.LA(1);
				if ( !(_la==DIGIT || _la==LETTER) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				}
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 72;
			Match(QUOTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LETTER() { return GetTokens(LogoParser.LETTER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LETTER(int i) {
			return GetToken(LogoParser.LETTER, i);
		}
		public IdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.EnterIdentifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.ExitIdentifier(this);
		}
	}

	[RuleVersion(0)]
	public IdentifierContext identifier() {
		IdentifierContext _localctx = new IdentifierContext(Context, State);
		EnterRule(_localctx, 6, RULE_identifier);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			Match(LETTER);
			State = 78;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 75;
					Match(LETTER);
					}
					} 
				}
				State = 80;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPER_ADD() { return GetToken(LogoParser.OPER_ADD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPER_SUB() { return GetToken(LogoParser.OPER_SUB, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPER_MUL() { return GetToken(LogoParser.OPER_MUL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPER_DIV() { return GetToken(LogoParser.OPER_DIV, 0); }
		public OperandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.EnterOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.ExitOperand(this);
		}
	}

	[RuleVersion(0)]
	public OperandContext operand() {
		OperandContext _localctx = new OperandContext(Context, State);
		EnterRule(_localctx, 8, RULE_operand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPER_ADD) | (1L << OPER_SUB) | (1L << OPER_MUL) | (1L << OPER_DIV))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Comparator_genContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMP_EQ() { return GetToken(LogoParser.COMP_EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMP_NE() { return GetToken(LogoParser.COMP_NE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMP_L() { return GetToken(LogoParser.COMP_L, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMP_LE() { return GetToken(LogoParser.COMP_LE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMP_G() { return GetToken(LogoParser.COMP_G, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMP_GE() { return GetToken(LogoParser.COMP_GE, 0); }
		public Comparator_genContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comparator_gen; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.EnterComparator_gen(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.ExitComparator_gen(this);
		}
	}

	[RuleVersion(0)]
	public Comparator_genContext comparator_gen() {
		Comparator_genContext _localctx = new Comparator_genContext(Context, State);
		EnterRule(_localctx, 10, RULE_comparator_gen);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMP_EQ) | (1L << COMP_L) | (1L << COMP_LE) | (1L << COMP_G) | (1L << COMP_GE) | (1L << COMP_NE))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Num_valContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Int_typeContext int_type() {
			return GetRuleContext<Int_typeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Float_typeContext float_type() {
			return GetRuleContext<Float_typeContext>(0);
		}
		public Num_valContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_num_val; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.EnterNum_val(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.ExitNum_val(this);
		}
	}

	[RuleVersion(0)]
	public Num_valContext num_val() {
		Num_valContext _localctx = new Num_valContext(Context, State);
		EnterRule(_localctx, 12, RULE_num_val);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 85;
				int_type();
				}
				break;
			case 2:
				{
				State = 86;
				float_type();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Operation_genContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Num_valContext[] num_val() {
			return GetRuleContexts<Num_valContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Num_valContext num_val(int i) {
			return GetRuleContext<Num_valContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext operand() {
			return GetRuleContext<OperandContext>(0);
		}
		public Operation_genContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operation_gen; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.EnterOperation_gen(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.ExitOperation_gen(this);
		}
	}

	[RuleVersion(0)]
	public Operation_genContext operation_gen() {
		Operation_genContext _localctx = new Operation_genContext(Context, State);
		EnterRule(_localctx, 14, RULE_operation_gen);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			num_val();
			State = 90;
			operand();
			State = 91;
			num_val();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Value_genContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Num_valContext[] num_val() {
			return GetRuleContexts<Num_valContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Num_valContext num_val(int i) {
			return GetRuleContext<Num_valContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public List_accContext list_acc() {
			return GetRuleContext<List_accContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(LogoParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext operand() {
			return GetRuleContext<OperandContext>(0);
		}
		public Value_genContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value_gen; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.EnterValue_gen(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.ExitValue_gen(this);
		}
	}

	[RuleVersion(0)]
	public Value_genContext value_gen() {
		Value_genContext _localctx = new Value_genContext(Context, State);
		EnterRule(_localctx, 16, RULE_value_gen);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 93;
				num_val();
				}
				break;
			case 2:
				{
				State = 94;
				identifier();
				State = 95;
				list_acc();
				}
				break;
			case 3:
				{
				State = 97;
				identifier();
				State = 98;
				Match(DOT);
				}
				break;
			case 4:
				{
				State = 100;
				num_val();
				State = 101;
				operand();
				State = 102;
				num_val();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class List_accContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SQB_L() { return GetToken(LogoParser.SQB_L, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Value_genContext value_gen() {
			return GetRuleContext<Value_genContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SQB_R() { return GetToken(LogoParser.SQB_R, 0); }
		public List_accContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_list_acc; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.EnterList_acc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.ExitList_acc(this);
		}
	}

	[RuleVersion(0)]
	public List_accContext list_acc() {
		List_accContext _localctx = new List_accContext(Context, State);
		EnterRule(_localctx, 18, RULE_list_acc);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			Match(SQB_L);
			State = 107;
			value_gen();
			State = 108;
			Match(SQB_R);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CondContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Value_genContext[] value_gen() {
			return GetRuleContexts<Value_genContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Value_genContext value_gen(int i) {
			return GetRuleContext<Value_genContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Comparator_genContext comparator_gen() {
			return GetRuleContext<Comparator_genContext>(0);
		}
		public CondContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cond; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.EnterCond(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.ExitCond(this);
		}
	}

	[RuleVersion(0)]
	public CondContext cond() {
		CondContext _localctx = new CondContext(Context, State);
		EnterRule(_localctx, 20, RULE_cond);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			value_gen();
			State = 111;
			comparator_gen();
			State = 112;
			value_gen();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class List_typeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SQB_L() { return GetToken(LogoParser.SQB_L, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SQB_R() { return GetToken(LogoParser.SQB_R, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Value_genContext[] value_gen() {
			return GetRuleContexts<Value_genContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Value_genContext value_gen(int i) {
			return GetRuleContext<Value_genContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public List_typeContext[] list_type() {
			return GetRuleContexts<List_typeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public List_typeContext list_type(int i) {
			return GetRuleContext<List_typeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(LogoParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(LogoParser.COMMA, i);
		}
		public List_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_list_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.EnterList_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILogoListener typedListener = listener as ILogoListener;
			if (typedListener != null) typedListener.ExitList_type(this);
		}
	}
